--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,7 @@ button {
 }
 
 .section-title--keycolorlight .section-title__stage {
-  color: #000;
+  color: #fff;
 }
 
 .section-title--keycolor {
