--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,11 +239,11 @@ button {
 * Color
 *********************/
 .bg-color--keycolor {
-  background-color: #39b54a;
+  background-color: #e6e6e6;
 }
 
 .bg-color--subcolor {
-  background-color: #d9e021;
+  background-color: #6b0000;
 }
 
 .bg-color--gray {
