--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,7 +430,7 @@ button {
 }
 
 .stage-column__container + .stage-column__container {
-  border-top: 2px solid #000;
+  border-top: 2px solid #fff;
 }
 
 .answer {
@@ -474,7 +474,7 @@ button {
   display: block;
   width: 183px;
   height: 2px;
-  background-color: #000;
+  background-color: #fff;
   bottom: 0;
   left: calc(50% - (183px/2));
 }
