--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ button {
   border: none;
   margin: 0 auto;
   background-color: #006837;
-  color: #000;
+  color: #fff;
   width: 287px;
   height: 55px;
 }
