--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,7 +316,7 @@ button {
   left: calc(50% - 95px);
   display: block;
   content: '';
-  background-color: #000;
+  background-color: #fff;
   height: 2.6px;
   width: 190px;
 }
