--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ button {
 }
 
 .section-title--keycolorlight {
-  background-color: #8cc63f;
+  background-color: #940101;
 }
 
 .section-title--keycolorlight .section-title__stage {
